--- a/samples/paparazzi/main.reel/main.html
+++ b/samples/paparazzi/main.reel/main.html
@@ -56,7 +56,7 @@ POSSIBILITY OF SUCH DAMAGE.
                         "element": {"#": "camera" }
                     },
                     "bindings": {
-                        "filterIndex": { "<<->": "@filterGallery.selectedFilterIndex" }
+                        "filterIndex": { "<->": "@filterGallery.selectedFilterIndex" }
                     },
                     "listeners": [
                         {
@@ -118,7 +118,7 @@ POSSIBILITY OF SUCH DAMAGE.
                         "element": {"#": "flashCheckbox"}
                     },
                     "bindings": {
-                        "checked": { "<<->": "@owner.doFlash" }
+                        "checked": { "<->": "@owner.doFlash" }
                     }
                 },
 
